# CPP

./: .gitignore  LICENSE  README.md  conf.sh  configure.ac
src/: 22-1.c  22-2.cpp  22-3-2.cpp  22-3.cpp  22-4.cpp  22-5.cpp  22-6.cpp  22-7.cpp  Makefile.am  dot.cpp  dot2.cpp  hw.cpp  hw2.c  pointers.cpp  pointers2.cpp  ptrie.c  stringExample.cpp  vektor.hpp
src/2048/: 2048.hpp  Makefile.am  random.cpp  test.cpp
src/rat/: rational.hpp  test.cpp
src/vektor/: Makefile.am  ref.cpp  test.cpp  vektor.hpp
